src/main/java/com/xenoamess/x8l/psi/X8l.bnf
{
  parserClass="com.xenoamess.x8l.psi.parser.X8lParser"
  parserUtilClass="com.xenoamess.x8l.psi.parser.X8lParserUtil"

  extends="com.intellij.extapi.psi.ASTWrapperPsiElement"

  psiClassPrefix="X8l"
  psiImplClassSuffix="Impl"
  psiPackage="com.xenoamess.x8l.psi"
  psiImplPackage="com.xenoamess.x8l.psi.impl"

  elementTypeHolderClass="com.xenoamess.x8l.psi.X8lTypes"
  elementTypeClass="com.xenoamess.x8l.psi.X8lElementType"
  tokenTypeClass="com.xenoamess.x8l.psi.X8lTokenType"

  psiImplUtilClass="com.xenoamess.x8l.psi.impl.X8lPsiImplUtil"
}

//simpleFile ::= item_*
//
//private item_ ::= (property|COMMENT|CRLF)
//
//property ::= (KEY? SEPARATOR VALUE?) | KEY {
//  mixin="com.xenoamess.x8l.com.xenoamess.x8l.psi.impl.X8lNamedElementImpl"
//  implements="com.xenoamess.x8l.com.xenoamess.x8l.psi.X8lNamedElement"
//  methods=[getKey getValue getName setName getNameIdentifier getPresentation]
//}

//x8lFile ::= CONTENT_NODE_CHILDREN_AREA
//CONTENT_NODE_CHILDREN_AREA ::= (TEXT_NODE (COMMENT_NODE|CONTENT_NODE))* TEXT_NODE
//CONTENT_NODE ::= LEFT_BRACKET CONTENT_NODE_HEAD_AREA RIGHT_BRACKET CONTENT_NODE_CHILDREN_AREA RIGHT_BRACKET
//CONTENT_NODE_HEAD_AREA ::= CONTENT_NODE_ATTRIBUTE*
//CONTENT_NODE_ATTRIBUTE ::= (KEY SEPARATOR VALUE) | KEY {
//    implements="com.intellij.psi.PsiNameIdentifierOwner"
//    methods=[getKey getValue getName setName getNameIdentifier getPresentation]
//}
//COMMENT_NODE ::= '<<' TEXT_STRING? '>' {
//    implements="com.intellij.psi.PsiComment"
//    methods=[getTokenType]
//}
//TEXT_NODE ::= TEXT_STRING? {
//    implements="com.intellij.psi.PsiLiteral"
//    methods=[getValue getPresentation]
//}
//LEFT_BRACKET ::= '<'
//RIGHT_BRACKET ::= '>'

x8lFile ::= ROOT_NODE_CHILDREN_AREA
ROOT_NODE_CHILDREN_AREA ::= CONTENT_NODE_CHILDREN_AREA

CONTENT_NODE_CHILDREN_AREA ::= (TEXT_NODE (COMMENT_NODE|CONTENT_NODE))* TEXT_NODE {
    implements=["com.intellij.psi.PsiNameIdentifierOwner"]
    methods=[getTokenType getNameIdentifier getValue getPresentation getName setName]
}

CONTENT_NODE ::= LEFT_BRACKET CONTENT_NODE_HEAD_AREA RIGHT_BRACKET CONTENT_NODE_CHILDREN_AREA RIGHT_BRACKET {
    implements=["com.intellij.psi.PsiNameIdentifierOwner"]
    methods=[getTokenType getNameIdentifier getValue getPresentation getName setName]
}

CONTENT_NODE_HEAD_AREA ::= WHITE_SPACE CONTENT_NODE_ATTRIBUTE* WHITE_SPACE{
    implements=["com.intellij.psi.PsiNameIdentifierOwner"]
    methods=[getTokenType getNameIdentifier getValue getPresentation getName setName]
}

CONTENT_NODE_ATTRIBUTE ::= (WHITE_SPACE CONTENT_NODE_ATTRIBUTE_KEY WHITE_SPACE SEPARATOR WHITE_SPACE CONTENT_NODE_ATTRIBUTE_VALUE WHITE_SPACE) | WHITE_SPACE CONTENT_NODE_ATTRIBUTE_KEY WHITE_SPACE {
    implements="com.intellij.psi.PsiNameIdentifierOwner"
    methods=[getTokenType getNameIdentifier getKey getValue getPresentation getName setName]
}

COMMENT_NODE ::= COMMENT_NODE_LEFT_BRACKET COMMENT_NODE_CONTENT COMMENT_NODE_RIGHT_BRACKET {
    implements=["com.intellij.psi.PsiComment" "com.intellij.psi.PsiLiteralValue" "com.intellij.psi.PsiNameIdentifierOwner"]
    methods=[getTokenType getNameIdentifier getValue getPresentation getName setName]
}

TEXT_NODE ::= TEXT_NODE_CONTENT {
    implements=["com.intellij.psi.PsiLiteralValue" "com.intellij.psi.PsiNameIdentifierOwner"]
    methods=[getTokenType getNameIdentifier getValue getPresentation getName setName]
}

TEXT_NODE_CONTENT ::= TEXT_NODE_CONTENT_STRING? {
    implements=["com.intellij.psi.PsiLiteralValue" "com.intellij.psi.PsiNameIdentifierOwner"]
    methods=[getTokenType getNameIdentifier getValue getPresentation getName setName]
}

COMMENT_NODE_CONTENT ::= COMMENT_NODE_CONTENT_STRING? {
    implements=["com.intellij.psi.PsiLiteralValue" "com.intellij.psi.PsiNameIdentifierOwner"]
    methods=[getTokenType getNameIdentifier getValue getPresentation getName setName]
}

CONTENT_NODE_ATTRIBUTE_KEY::= CONTENT_NODE_ATTRIBUTE_KEY_CONTENT_STRING {
    implements=["com.intellij.psi.PsiLiteralValue" "com.intellij.psi.PsiNameIdentifierOwner"]
    methods=[getTokenType getNameIdentifier getValue getPresentation getName setName]
}

CONTENT_NODE_ATTRIBUTE_VALUE ::= CONTENT_NODE_ATTRIBUTE_VALUE_CONTENT_STRING {
    implements=["com.intellij.psi.PsiLiteralValue" "com.intellij.psi.PsiNameIdentifierOwner"]
    methods=[getTokenType getNameIdentifier getValue getPresentation getName setName]
}

WHITE_SPACE ::= WHITE_SPACE_CONTENT_STRING?
